Update README.md regarding possible reflection issue